# iowarrior-embedded-hal

./: Cargo.toml  README.md
src/: lib.rs
src/adc/: adc.rs  adc_config.rs  adc_data.rs  adc_error.rs  adc_sample.rs  adc_service.rs  mod.rs
src/backend/: hid.rs  iowkit.rs  mod.rs  shared.rs  usb.rs  usbhid.rs
src/bits/: bit.rs  bitmasking.rs  mod.rs
src/communication/: initialization_error.rs  mod.rs
src/communication/ioctrl/: communication_data.rs  communication_service.rs  initialization_service.rs  mod.rs
src/communication/iowkit/: communication_data.rs  communication_service.rs  initialization_service.rs  mod.rs
src/communication/usbhid/: communication_data.rs  communication_service.rs  initialization_service.rs  mod.rs
src/delay/: delay.rs  mod.rs
src/digital/: digital_service.rs  input_pin.rs  mod.rs  output_pin.rs  pin_error.rs  pin_setup_error.rs
src/i2c/: i2c.rs  i2c_config.rs  i2c_error.rs  i2c_service.rs  mod.rs
src/iowarrior/: hid_error.rs  iowarrior.rs  iowarrior_data.rs  iowarrior_info.rs  iowarrior_lock.rs  iowarrior_mut_data.rs  iowarrior_service.rs  iowarrior_type.rs  mod.rs  peripheral.rs  peripheral_service.rs  peripheral_setup_error.rs  pipe.rs  pipe_name.rs  report.rs  report_id.rs  used_pin.rs
src/pwm/: mod.rs  pwm.rs  pwm_config.rs  pwm_data.rs  pwm_error.rs  pwm_service.rs
src/spi/: mod.rs  spi.rs  spi_config.rs  spi_data.rs  spi_error.rs  spi_service.rs
