[package]
name = "iowarrior-embedded-hal"
version = "0.1.0"
edition = "2021"
authors = ["Florian Porsch"]
license = "MIT"
readme = "README.md"
keywords = ["iowarrior", "iowkit", "embedded_hal", "embedded-hal-impl", "hal"]
categories = ["embedded", "hardware-support"]
repository = "https://github.com/Tederean/iowarrior-embedded-hal"
description = "A Rust library that provides access to the IOWarrior GPIO, I2C, PWM, SPI and ADC peripherals."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
cfg-if = "1"
itertools = "0.13"
embedded-hal = "1"

embedded-hal-0 = { version = "0.2.7", optional = true, package = "embedded-hal", features = ["unproven"] }

libloading = { version = "0.8", optional = true }
iowkit-sys = { version = "0.1", optional = true }

hidapi = { version = "2.6", default-features = false, optional = true, features = ["windows-native", "linux-native"] }

rusb = { version = "0.9", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Devices_HumanInterfaceDevice"] }

[target.'cfg(linux)'.dependencies]
nix = { version = "0.29", features = ["ioctl"] }

[features]
default = ["iowkit"]
embedded-hal-0 = ["dep:embedded-hal-0"]
iowkit = ["dep:libloading", "dep:iowkit-sys"]
hid = ["dep:hidapi"]
usb = ["dep:rusb"]
